get region API endpoint
